(fix): m-modal-signup appears behind media modal

--- a/src/app/modules/pro/channel/channel.component.scss
+++ b/src/app/modules/pro/channel/channel.component.scss
@@ -58,12 +58,16 @@ m-pro--channel {
   }
 
   m-modal-signup {
-    m-modal .m-modal-container .mdl-card {
-      background-color: var(--m-pro--transparent-background-color);
-      color: var(--m-pro--text-color);
+    m-modal {
+      z-index: 9999999;
 
-      .m-modal-signup-apps {
-        display: none;
+      .m-modal-container .mdl-card {
+        background-color: var(--m-pro--transparent-background-color);
+        color: var(--m-pro--text-color);
+
+        .m-modal-signup-apps {
+          display: none;
+        }
       }
     }
   }
